<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_title_bar_color"
    android:id="@+id/root_layout"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_title_bar_color" >

        <RelativeLayout
            android:id="@+id/layout_top"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:minHeight="@dimen/main_title_bar_min_height"
        	 >

        <TextView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/icon_edit_banner_back"
            android:drawableStart="@drawable/icon_edit_banner_back"
            android:gravity="center"
            android:singleLine="true"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:gravity="center"
            android:text="@string/download_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="28dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/title_edit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_top2"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:minHeight="@dimen/main_title_bar_min_height"
        	android:visibility="gone"
        	 >


        <TextView
            android:id="@+id/title_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_vertical"
            android:text="@string/select_all"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:clickable="true"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/title_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="28dp"
            android:gravity="center"
            android:text="@string/done"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>
    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" >

        <com.xyh.video.download.ui.TitledListView
            android:id="@+id/size_ordered_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >
        </com.xyh.video.download.ui.TitledListView>
        <!-- <ListView
            android:id="@+id/size_ordered_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" > 
        </ListView>-->

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/no_downloads"
            android:textColor="@color/text_secondary"
            android:textStyle="bold" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@android:color/white" >

        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:paddingBottom="1dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingTop="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/default_download_location"
                android:textColor="@drawable/text_black_color_selector"
                android:drawableRight="@drawable/setting_icon_right"
                android:drawablePadding="10dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_bottom2"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:paddingBottom="1dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingTop="5dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete_local_delete"
                android:textColor="@drawable/text_black_color_selector"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>