<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
 	>
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="40dip"
        android:paddingLeft="20dip" 
        android:paddingRight="20dip" 
        android:orientation="horizontal" 
        android:background="@android:color/white" 
       	>
        <ImageView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_gravity="center"  
            android:src="@drawable/dialog_icon" />
        <LinearLayout 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:gravity="right" 
            android:orientation="horizontal" 
            >
            <ImageButton 
                android:id="@+id/close" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:layout_gravity="center" 
                android:background="#00ffffff" 
                android:visibility="gone"  
                android:src="@drawable/dialog_close" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
       	android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:paddingLeft="20dip" 
        android:paddingRight="20dip" 
        android:orientation="vertical" 
        android:background="#bbffffff" 
        >
        <TextView 
            android:id="@+id/message" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:text="@string/point_low"
            android:textColor="#ff000000" 
             />
        <View 
            android:layout_width="fill_parent" 
            android:layout_height="1dp" 
            android:background="@android:color/white" 
            />
        <LinearLayout 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp" 
            android:layout_marginBottom="10dp"
            android:layout_gravity="right" 
            android:orientation="horizontal" 
            >
            <Button 
                android:id="@+id/no" 
                android:layout_width="60dp" 
                android:layout_height="30dp" 
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_y01_03" 
                android:text="@string/no" />
            <Button 
                android:id="@+id/yes" 
                android:background="@drawable/bg_n01_03" 
                android:layout_width="60dp" 
                android:layout_height="30dp" 
                android:layout_marginLeft="10dp"
                android:text="@string/yes" />
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>