<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.shipin.player.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/edit_linear_ly">

        <GridView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dip"
            android:paddingBottom="10dip"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideInset"
            android:numColumns="auto_fit"
            android:fastScrollEnabled="true"
            android:fadingEdge="none"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:nextFocusUp="@+id/ml_menu_search"
            android:nextFocusDown="@id/android:list"
            android:nextFocusLeft="@id/android:list"
            android:nextFocusRight="@id/android:list" />
    </com.shipin.player.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_linear_ly"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingTop="20dip" >

        <TextView
            android:id="@+id/textview_nomedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nomedia"
            android:textSize="20sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/layout_flipper_loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/loading"
                android:textSize="20sp" />

            <ViewFlipper
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:autoStart="true"
                android:flipInterval="1000" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/empty"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_1_period"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_2_period"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_3_period"
                    android:textSize="20sp" />
            </ViewFlipper>
        </LinearLayout>
    </LinearLayout>
	
    <!-- 添加编辑功能布局 yukun -->
    <LinearLayout
         android:id="@+id/edit_linear_ly"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:background="@color/grey100">

         <LinearLayout
             android:id="@+id/edit_linear_ly1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:background="@drawable/selector_item_background"
             android:layout_weight="1">
             <ImageView
              android:id="@+id/edit_image1"
              android:layout_width="wrap_content"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:src="@drawable/ic_done_all_black_24dp" />

        	<TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="5dp"
              android:text="ALL" />
         </LinearLayout>

         <LinearLayout
             android:id="@+id/edit_linear_ly2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:background="@drawable/selector_item_background" 
             android:layout_weight="1">
             <ImageView
              android:id="@+id/edit_image1"
              android:layout_width="wrap_content"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:src="@drawable/ic_delete_black_24dp" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="5dp"
              android:singleLine="true"
              android:text="Delete" />
         </LinearLayout>

         <LinearLayout
             android:id="@+id/edit_linear_ly3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" 
             android:gravity="center"
             android:background="@drawable/selector_item_background"
             android:layout_weight="1">
          <ImageView
              android:id="@+id/edit_image1"
              android:layout_width="wrap_content"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:src="@drawable/ic_visibility_off_black_24dp" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="5dp"
              android:text="Hide" />
         </LinearLayout>
     </LinearLayout>
    
    <include layout="@layout/shadow_top"
        android:visibility="gone" />
    
    <!-- <LinearLayout
        android:id="@+id/video_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:gravity="center_vertical" >

        <ProgressBar
            android:id="@+id/video_loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/video_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7.0dip"
            android:text="video_deleting......"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />
    </LinearLayout> -->
    
</RelativeLayout>
